Add Google Analytics & changed the page title
Add Google Analytics & changed the page title

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>San Jose Disaster Response</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EP23WYLK1H"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-EP23WYLK1H');
+    </script>
   </head>
   <body>
     <noscript>
